--- a/www/directives/generic-field.html
+++ b/www/directives/generic-field.html
@@ -1,4 +1,6 @@
-<div class="name col-{{colWidth || 6}}">
-  <span class="label col-{{labelColWidth || 5}}">{{label}}</span>
-  <span class="value col-{{labelColWidth ? 12 - labelColWidth : 7}}"><input ng-model="namespace"></span>
+<div class="name col-12">
+  <span class="label col-5">{{label}}</span>
+  <span class="value col-7">
+    <input ng-init="namespace=namespace" ng-model="namespace" ng-change="save({arg: namespace})">
+  </span>
 </div>
